[package]
name = "dobot-api"
version = "0.1.0"
authors = ["higumachan <harekumo792154@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "^3.3"
nom = "^5.1"
futures = "^0.3"
tokio = { version = "^0.2", features = ["full"] }
